welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:9: error: missing parameter type
  if (a=>0 & b<0){
      ^posNeg:9: error: overloaded method value & with alternatives:
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Boolean)
  if (a=>0 & b<0){
           ^posNeg:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if (a=>0 & b<0){
  ^